--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,12 @@
     <string name="cnt_price">Price of the product</string>
     <string name="cnt_bcd">Scan barcode</string>
     <string name="cnt_add">Add Item</string>
+    <string name="tst_enter_pwd">Enter password!</string>
+    <string name="tst_email_id">Enter email address!</string>
+    <string name="tst_pwd_shrt">Password too short, enter minimum 6 characters!</string>
+    <string name="auth_failed_tst">Authentication failed.</string>
+    <string name="rst_id">Enter your registered email id</string>
+    <string name="rst_inst">We have sent you instructions to reset your password!</string>
+    <string name="rst_failed">Failed to send reset email!</string>
 
 </resources>
